--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
             </div>
         </footer>
         <!--===================== SCROLL TOP =====================-->
-        <a href="" class="scrollup" id="scroll-up">
+        <a href="#home" class="scrollup" id="scroll-up">
             <i class="uil uil-arrow-up scrollup__icon"></i>
         </a>
         <!--===================== SWIPER JS =====================-->
