--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                                     obtener las imagenes para su visualizacion y descarga.
                                 </p>
     
-                                <a href="https://gifsapp-lucamonteleone.netlify.app" target="_blank class="button button--flex button--small portfolio__button">
+                                <a href="https://gifsapp-lucamonteleone.netlify.app" target="_blank" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -564,7 +564,7 @@
                                     funcionalidad de ciertos pipes y la creacion de pipes personalizadas
                                 </p>
     
-                                <a href="https://pipesapp-luca-monteleone.netlify.app" target="_blank class="button button--flex button--small portfolio__button">
+                                <a href="https://pipesapp-luca-monteleone.netlify.app" target="_blank" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
