--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hola, me llamo Luca</h1>
+                            <h1 class="home__title">Hola, soy Luca Monteleone</h1>
                             <h3 class="home__subtitle">FullStack Developer</h3>
                             <p class="home__description">Bienvenido a mi portfolio, aqui podras informacion sobre mi, mis conocimientos y mis aptitudes</p>
                             <a href="#contact" class="button button--flex">
@@ -702,7 +702,7 @@
             <!--===================== CONTACT ME =====================-->
             <section class="contact section" id="contact">
                 <h2 class="section__title">Contacto</h2>
-                <span class="section__subtitle">En 5 clicks</span>
+                <span class="section__subtitle">En 5 pasos</span>
 
                 <div class="contact__container container grid">
                     <div>
