--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>My Portfolio</title>
+        <title>Luca Monteleone</title>
         <!--===================== UNICONS =====================-->
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
         <!--===================== SWIPER CSS =====================-->
@@ -101,7 +101,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hola, soy Luca Monteleone</h1>
                             <h3 class="home__subtitle">FullStack Developer</h3>
-                            <p class="home__description">Bienvenido a mi portfolio, aqui podras informacion sobre mi, mis conocimientos y mis aptitudes</p>
+                            <p class="home__description">Bienvenido a mi portfolio, aqui podras ver informacion sobre mi, mis conocimientos y mis aptitudes</p>
                             <a href="#contact" class="button button--flex">
                                 Contactame<i class="uil uil-message button__icon"></i>
                             </a>
