--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                             <a href="https://www.linkedin.com/in/luca-monteleone/" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
-                            <a href="#" target="_blank" class="home__social-icon">
+                            <!-- <a href="#" target="_blank" class="home__social-icon">
                                 <i class="uil uil-dribbble"></i>
-                            </a>
+                            </a> -->
                             <a href="https://github.com/monteluca" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
                             </a>
