--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/Currículum Luca Monteleone.pdf" class="button button--flex">
+                        <a download="" href="assets/pdf/Luca Monteleone CV.pdf" class="button button--flex">
                             Descargar CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -183,40 +183,26 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">HTML</h3>
-                                    <span class="skills__number">30%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__html"></span>
                                 </div>
                             </div>
-
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">CSS</h3>
-                                    <span class="skills__number">30%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__css"></span>
                                 </div>
                             </div>
-
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">JavaScript</h3>
-                                    <span class="skills__number">20%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__js"></span>
                                 </div>
                             </div>
-
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Angular</h3>
-                                    <span class="skills__number">40%</span>
                                 </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__angular"></span>
+                            </div>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">React</h3>
                                 </div>
                             </div>
                         </div>
@@ -228,9 +214,8 @@
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Programador Backend</h1>
-                                <span class="skills__subtitle">Más de 1 año</span>
+                                <span class="skills__subtitle">Menos de 1 año</span>
                             </div>
-
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
 
@@ -238,23 +223,13 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Java</h3>
-                                    <span class="skills__number">70%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__java"></span>
                                 </div>
                             </div>
-
                             <div class="skills__data">
                                 <div class="skills__titles">
-                                    <h3 class="skills__name">Node Js</h3>
-                                    <span class="skills__number">20%</span>
-                                </div>
-                                <div class="skills__bar">
-                                    <span class="skills__percentage skills__node"></span>
+                                    <h3 class="skills__name">Spring</h3>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -502,6 +477,14 @@
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Desarrollo de aplicaciones en Spring</p>
                                     </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Creacion de una API</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Conexion del backend con el frontend</p>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -532,6 +515,14 @@
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Arreglo de bugs visuales</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Creacion de componentes</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Desarrollo de aplicaciones Android</p>
                                     </li>
                                 </ul>
                             </div>
