--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">03+</span>
+                            <span class="about__info-title">01+</span>
                             <span class="about_info-name">Años de <br> experiencia</span>
                         </div>
 
@@ -173,7 +173,7 @@
 
                             <div>
                                 <h1 class="skills__title">Programador Frontend</h1>
-                                <span class="skills__subtitle">Mas de 1 año</span>
+                                <span class="skills__subtitle">Más de 1 año</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -214,7 +214,7 @@
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Programador Backend</h1>
-                                <span class="skills__subtitle">Menos de 1 año</span>
+                                <span class="skills__subtitle">Más de 1 año</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
@@ -377,7 +377,7 @@
                                 <span class="qualification__subtitle">España - Remoto</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    03/2023 - 06/2023
+                                    03/2023 - 07/2023
                                 </div>
                             </div>
 
@@ -401,7 +401,7 @@
                                 <span class="qualification__subtitle">Argentina - Remoto</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    07/2023 - 09/2023
+                                    07/2023 - 01/2024
                                 </div>
                             </div>
                         </div>
@@ -413,7 +413,7 @@
                                 <span class="qualification__subtitle">Argentina - Remoto  FREELANCER</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    10/2023 - Actualidad
+                                    09/2023 - Actualidad
                                 </div>
                             </div>
 
@@ -471,19 +471,15 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Desarrollo del Backend de una aplicación web</p>
-                                    </li>
-                                    <li class="services__modal-service">
-                                        <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Desarrollo de aplicaciones en Spring</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Creacion de una API</p>
+                                        <p>Creación de microservicios</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Conexion del backend con el frontend</p>
+                                        <p>Creación de una API RESTful</p>
                                     </li>
                                 </ul>
                             </div>
@@ -518,7 +514,7 @@
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Creacion de componentes</p>
+                                        <p>Creación de componentes</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
