--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">01+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about_info-name">Años de <br> experiencia</span>
                         </div>
 
                         <div>
-                            <span class="about__info-title">3+</span>
+                            <span class="about__info-title">5+</span>
                             <span class="about_info-name">Proyectos <br> completos</span>
                         </div>
 
@@ -173,7 +173,7 @@
 
                             <div>
                                 <h1 class="skills__title">Programador Frontend</h1>
-                                <span class="skills__subtitle">Más de 1 año</span>
+                                <span class="skills__subtitle">Más de 3 años</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -214,7 +214,7 @@
                             <i class="uil uil-server-network skills__icon"></i>
                             <div>
                                 <h1 class="skills__title">Programador Backend</h1>
-                                <span class="skills__subtitle">Más de 1 año</span>
+                                <span class="skills__subtitle">Más de 3 años</span>
                             </div>
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
@@ -319,35 +319,35 @@
 
                             <div>
                                 <span class="qualification__rounder"></span>
-                                <!-- <span class="qualification__line"></span> -->
+                                <span class="qualification__line"></span>
                             </div>
 
                             <div>
                                 <h3 class="qualification__title">Angular de Cero a experto</h3>
-                                <span class="qualification__subtitle">Mendoza - Online</span>
+                                <span class="qualification__subtitle">Udemy</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    2023 - 2023
+                                    2025 - 2025
                                 </div>
                             </div>
                         </div>
 
                         <!--===================== QUALIFICATION 3 =====================-->
-                        <!-- <div class="qualification__data">
+                        <div class="qualification__data">
                                 <div>
-                                    <h3 class="qualification__title">Enginner</h3>
-                                    <span class="qualification__subtitle">Peru - University</span>
+                                    <h3 class="qualification__title">Python TOTAL Programador avanzado en 16 días</h3>
+                                    <span class="qualification__subtitle">Udemy</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
-                                        2009 - 2014
+                                        2025 - 2025
                                     </div>
                                 </div>
 
                                 <div>
                                     <span class="qualification__rounder"></span>
-                                    <span class="qualification__line"></span>
+                                    <!-- <span class="qualification__line"></span> -->
                                 </div>
-                            </div> -->
+                            </div>
 
                         <!--===================== QUALIFICATION 4 =====================-->
                         <!-- <div class="qualification__data">
@@ -377,7 +377,7 @@
                                 <span class="qualification__subtitle">España - Remoto</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    03/2023 - 07/2023
+                                    02/2023 - 07/2023
                                 </div>
                             </div>
 
@@ -413,7 +413,7 @@
                                 <span class="qualification__subtitle">Argentina - Remoto  FREELANCER</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    09/2023 - Actualidad
+                                    09/2023 - 08/2024
                                 </div>
                             </div>
 
@@ -429,7 +429,7 @@
 
                             <div>
                                 <span class="qualification__rounder"></span>
-                                <!-- <span class="qualification__line"></span> -->
+                                <span class="qualification__line"></span>
                             </div>
 
                             <div>
@@ -437,8 +437,24 @@
                                 <span class="qualification__subtitle">Argentina - Remoto  FREELANCER</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    11/2023 - Actualidad
+                                    11/2023 - 05/2024
                                 </div>
+                            </div>
+                        </div>
+
+                        <!--===================== QUALIFICATION 3 =====================-->
+                        <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Benza - FullStack Developer</h3>
+                                <span class="qualification__subtitle">Argentina - Remoto</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    07/2024 - Actualidad
+                                </div>
+                            </div>
+
+                            <div>
+                                <span class="qualification__rounder"></span>
                             </div>
                         </div>
 
@@ -481,6 +497,10 @@
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Creación de una API RESTful</p>
                                     </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Uso de JWT</p>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -506,7 +526,7 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
-                                        <p>Crear una aplicación en Angular</p>
+                                        <p>Desarrollos de aplicaciones en Angular</p>
                                     </li>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
@@ -519,6 +539,49 @@
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle services__modal-icon"></i>
                                         <p>Desarrollo de aplicaciones Android</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Optimización de código</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--===================== SERVICES 2 =====================-->
+                <div class="services__content">
+                    <div>
+                        <i class="uil uil-arrow services__icon"></i>
+                        <h3 class="services__title"> Programador <br> Wordpress</h3>
+
+                        <span class="button button--flex button--small button--link services__button">
+                            Ver más
+                            <i class="uil uil-arrow-right button__icon"></i>
+                        </span>
+
+                        <div class="services__modal">
+                            <div class="services__modal-content">
+                                <h4 class="services__modal-title"> Programador <br> Frontend</h4>
+                                <i class="uil uil-times services__modal-close"></i>
+
+                                <ul class="services__modal-services grid">
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Desarrollos de Landing Pages con un buen diseño</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Desarrollos de E-Commerces</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Buen uso de Elementor</p>
+                                    </li>
+                                    <li class="services__modal-service">
+                                        <i class="uil uil-check-circle services__modal-icon"></i>
+                                        <p>Diseño Responsive</p>
                                     </li>
                                 </ul>
                             </div>
