--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                     </li>
                 </ul>
 
-                <div class="footer__socials">
+                <!-- <div class="footer__socials">
                     <a href="" target="_blank" class="footer__social">
                         <i class="uil uil-facebook-f"></i>
                     </a>
@@ -879,7 +879,7 @@
                     <a href="" target="_blank" class="footer__social">
                         <i class="uil uil-twitter-alt"></i>
                     </a>
-                </div>
+                </div> -->
             </div>
 
             <p class="footer__copy">&#169; Luca Monteleone</p>
